# lumos

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
docs/plans/: 2026-01-31-lumos-design.md  2026-01-31-lumos-v0.1-implementation.md  2026-01-31-lumos-v0.2-implementation.md  2026-02-01-lumos-v0.3-implementation.md
resources/: lumos.rc  resource.h
src/: app.cpp  app.h  cli.cpp  cli.h  config.cpp  config.h  main.cpp
src/platform/win32/: file_dialog.cpp  file_dialog.h  gamma.cpp  gamma.h  hotkeys.cpp  hotkeys.h  screen_histogram.cpp  screen_histogram.h  tray.cpp  tray.h
src/ui/: about_dialog.cpp  about_dialog.h  help_dialog.cpp  help_dialog.h  imgui_curve.hpp  main_window.cpp  main_window.h  theme.h
